<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test2MyMobileSQLClient</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="ip_address">IP address</string>
    <string name="port_address">Port</string>
    <string name="login">Login</string>
    <string name="pass">Pass</string>
    <string name="request">SQL request</string>
    
    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="send_request">Send request</string>

</resources>
