<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.test2mymobilesqlclient.MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_address" />

        <EditText
            android:id="@+id/editText_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port_address" />

        <EditText
            android:id="@+id/editText_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <EditText
            android:id="@+id/editText_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass" />

        <EditText
            android:id="@+id/editText_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <Button
            android:id="@+id/button_disconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnect" />

        <Button
            android:id="@+id/button_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect" />

        <EditText
            android:id="@+id/editText_sql_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/request" />

        <Button
            android:id="@+id/button_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_request" />

        <TextView
            android:id="@+id/textView_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="..." />

    </LinearLayout>

</RelativeLayout>